--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "axios": "^1.6.7",
     "dotenv": "^16.4.5",
     "globals": "^15.11.0",
+    "katex": "^0.16.11",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-katex": "^3.0.1",
     "react-markdown": "^9.0.1",
     "remark-gfm": "^4.0.0",
     "typescript-eslint": "^8.11.0"
@@ -26,6 +28,7 @@
     "@types/node": "^22.7.6",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@types/react-katex": "^3.0.4",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
