--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.7",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.11.9",
     "globals": "^15.11.0",
     "katex": "^0.16.11",
     "lucide-react": "^0.344.0",
@@ -23,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-katex": "^3.0.1",
     "react-markdown": "^9.0.1",
+    "recharts": "^2.13.0",
     "rehype-katex": "^7.0.1",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
